<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="elegion.com.secondappforcontentprovidertest.MainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="mat1ch_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_spinner_table_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/spinner_table"
                android:text="@string/table_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spinner_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_spinner_query_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/spinner_action"
                android:text="@string/action_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spinner_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="8dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/edit_id"
                android:text="@string/id_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="8dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_data1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/edit_id"
                android:text="@string/data1_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_data1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="4dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_data2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/edit_id"
                android:text="@string/data2_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_data2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="4dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_data3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:labelFor="@id/edit_id"
                android:text="@string/data3_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edit_data3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="4dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:text="@string/btn_action_label"
                android:layout_height="wrap_content"

                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
